# Front-End-Pipe

./: README.md  pyproject.toml
config/: frontpipe.sample.yaml
dev_fixtures/email_samples/: GS_FUT_ABC_20250813.csv  MS_PB_Margin_20250813.csv  MS_PB_Positions_20250813.csv
frontpipe/: __init__.py  config_schema.py  logging_event_log.py  model.py  orchestrator.py  reporter.py  state_store.py
frontpipe/collectors/: api_collector.py  email_collector.py  ftp_collector.py
frontpipe/utils/: date_utils.py  email_utils.py  fs_utils.py
notebooks/: debug_frontpipe.ipynb  frontpipe_fast_feed_builder.ipynb
scripts/: generate_report.py  run_frontpipe.py
