[project]
name = "frontpipe"
version = "0.1.0"
description = "Lean, config-first front-of-pipe ingestion system"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["frontpipe", "frontpipe.utils", "frontpipe.collectors"]

[project.optional-dependencies]
dev = ["nbformat", "pytz", "python-dateutil"]
